--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: rosybrown;
+  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,6 +20,11 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+header, footer {
+  background: #333;
+  color: #fff;
 }
 
 body {
